--- a/SQLiteStudio3/coreSQLiteStudio/ChangeLog.txt
+++ b/SQLiteStudio3/coreSQLiteStudio/ChangeLog.txt
@@ -6,6 +6,7 @@
         * [BUGFIX]: Fixed crash when selected one or more empty lines (new line characters) end executing it.
         * [BUGFIX]: #3564 Fixed inifinite loop of language choice when configuration file could not be created.
         * [BUGFIX]: #3549 Fixed support for numbered bind parameters.
+        * [BUGFIX]: #291 Fixed named bind parameters dialog, so user will be prompted only once per unique parameter name when executing query with multiple uses of the same parameter.
 
 [3.2.1]
         * [BUGFIX]: #3399 Fixed start under Linux using the pre-compiled binary distributions (it used to fail due to missing xcb dependency).
