--- a/SQLiteStudio3/coreSQLiteStudio/ChangeLog.txt
+++ b/SQLiteStudio3/coreSQLiteStudio/ChangeLog.txt
@@ -7,6 +7,7 @@
         * [BUGFIX]: #3564 Fixed inifinite loop of language choice when configuration file could not be created.
         * [BUGFIX]: #3549 Fixed support for numbered bind parameters.
         * [BUGFIX]: #291 Fixed named bind parameters dialog, so user will be prompted only once per unique parameter name when executing query with multiple uses of the same parameter.
+        * [BUGFIX]: #3537 Fixed pasting to grid, so pasting to read-only cells is no longer possible.
 
 [3.2.1]
         * [BUGFIX]: #3399 Fixed start under Linux using the pre-compiled binary distributions (it used to fail due to missing xcb dependency).
