Removed DbSqlite2; updated GitHub action

--- a/SQLiteStudio3/coreSQLiteStudio/ChangeLog.txt
+++ b/SQLiteStudio3/coreSQLiteStudio/ChangeLog.txt
@@ -1,4 +1,6 @@
 [3.2.2]
+        * [CHANGE]: Windows binaries are now 64-bit.
+        * [CHANGE]: SQLite2 plugin removed due to harder and harder maintenance of SQLite2 library compilation.
         * [BUGFIX]: #3385 Fixed "Sort" checkbox for AUTOINCREMENT to have it disabled if AUTOINCREMENT is selected (SQLite does not allow ordering autoincremented primary keys).
         * [BUGFIX]: #3390 Number of primary keys restricted in table/column dialogs, so only one per table is allowed.
         * [BUGFIX]: #3421 Fixed unexpected database list panel shrinking when clicking on some items from that list.
